removed NAT Gateway

--- a/templates/network.yaml
+++ b/templates/network.yaml
@@ -202,16 +202,16 @@ Resources:
         - Key: Name
           Value: !Sub ${Environment}-ElasticIP
 
-  NatGateway:
-    Type: AWS::EC2::NatGateway
-    DependsOn: PublicSubnet1
-    Properties:
-      ConnectivityType: public
-      AllocationId: !GetAtt NATElasticIP.AllocationId
-      SubnetId: !GetAtt PublicSubnet1.SubnetId
-      Tags:
-        - Key: Name
-          Value: !Sub ${Environment}-NatGateway
+  # NatGateway:
+  #   Type: AWS::EC2::NatGateway
+  #   DependsOn: PublicSubnet1
+  #   Properties:
+  #     ConnectivityType: public
+  #     AllocationId: !GetAtt NATElasticIP.AllocationId
+  #     SubnetId: !GetAtt PublicSubnet1.SubnetId
+  #     Tags:
+  #       - Key: Name
+  #         Value: !Sub ${Environment}-NatGateway
 
   PublicRouteTable:
     Type: AWS::EC2::RouteTable
@@ -273,13 +273,13 @@ Resources:
         - Key: Name
           Value: !Sub "${AWS::StackName}-private-rt-${Environment}"
 
-  DefaultPrivateRoute:
-    Type: AWS::EC2::Route
-    DependsOn: NatGateway
-    Properties:
-      RouteTableId: !Ref PrivateRouteTable
-      DestinationCidrBlock: 0.0.0.0/0
-      NatGatewayId: !Ref NatGateway
+  # DefaultPrivateRoute:
+  #   Type: AWS::EC2::Route
+  #   DependsOn: NatGateway
+  #   Properties:
+  #     RouteTableId: !Ref PrivateRouteTable
+  #     DestinationCidrBlock: 0.0.0.0/0
+  #     NatGatewayId: !Ref NatGateway
 
   PrivateSubnet1RouteTableAssociation:
     Type: AWS::EC2::SubnetRouteTableAssociation
